@@ -18,7 +18,6 @@ import java.nio.file.Path;
 import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.zip.ZipFile;
 
@@ -356,8 +355,7 @@ public class ProgrammingExerciseIntegrationTestService {
         doReturn(repository1).when(gitService).getOrCheckoutRepository(eq(participation1.getVcsRepositoryUrl()), anyString(), anyBoolean());
         doReturn(repository2).when(gitService).getOrCheckoutRepository(eq(participation2.getVcsRepositoryUrl()), anyString(), anyBoolean());
 
-        var participationIds = programmingExerciseStudentParticipationRepository.findAll().stream().map(participation -> participation.getId().toString())
-                .collect(Collectors.toList());
+        var participationIds = programmingExerciseStudentParticipationRepository.findAll().stream().map(participation -> participation.getId().toString()).toList();
         final var path = ROOT + EXPORT_SUBMISSIONS_BY_PARTICIPATIONS.replace("{exerciseId}", String.valueOf(programmingExercise.getId())).replace("{participationIds}",
                 String.join(",", participationIds));
         // all options false by default, only test if export works at all
@@ -429,8 +427,7 @@ public class ProgrammingExerciseIntegrationTestService {
 
     public void testExportSubmissionsByParticipationIds_instructorNotInCourse_forbidden() throws Exception {
         database.addInstructor("other-instructors", "instructoralt");
-        var participationIds = programmingExerciseStudentParticipationRepository.findAll().stream().map(participation -> participation.getId().toString())
-                .collect(Collectors.toList());
+        var participationIds = programmingExerciseStudentParticipationRepository.findAll().stream().map(participation -> participation.getId().toString()).toList();
         final var path = ROOT + EXPORT_SUBMISSIONS_BY_PARTICIPATIONS.replace("{exerciseId}", String.valueOf(programmingExercise.getId())).replace("{participationIds}",
                 String.join(",", participationIds));
         request.postWithResponseBodyFile(path, getOptions(), HttpStatus.FORBIDDEN);
@@ -768,6 +765,30 @@ public class ProgrammingExerciseIntegrationTestService {
 
         // Programming exercise update with the new course should fail.
         request.put(ROOT + PROGRAMMING_EXERCISES, newProgrammingExercise, HttpStatus.CONFLICT);
+    }
+
+    /**
+     * This test checks that it is not allowed to change SCA enabled option
+     */
+    public void updateProgrammingExerciseShouldFailWithBadRequestWhenUpdatingSCAOption() throws Exception {
+        mockBuildPlanAndRepositoryCheck(programmingExercise);
+
+        ProgrammingExercise updatedExercise = programmingExercise;
+        updatedExercise.setStaticCodeAnalysisEnabled(true);
+
+        request.put(ROOT + PROGRAMMING_EXERCISES, updatedExercise, HttpStatus.BAD_REQUEST);
+    }
+
+    /**
+     * This test checks that it is not allowed to change coverage enabled option
+     */
+    public void updateProgrammingExerciseShouldFailWithBadRequestWhenUpdatingCoverageOption() throws Exception {
+        mockBuildPlanAndRepositoryCheck(programmingExercise);
+
+        ProgrammingExercise updatedExercise = programmingExercise;
+        updatedExercise.setTestwiseCoverageEnabled(true);
+
+        request.put(ROOT + PROGRAMMING_EXERCISES, updatedExercise, HttpStatus.BAD_REQUEST);
     }
 
     public void updateExerciseDueDateWithIndividualDueDateUpdate() throws Exception {
@@ -1320,7 +1341,7 @@ public class ProgrammingExerciseIntegrationTestService {
             testCaseUpdate.setBonusMultiplier(testCase.getId() + 1.0);
             testCaseUpdate.setBonusPoints(testCase.getId() + 2.0);
             return testCaseUpdate;
-        }).collect(Collectors.toList());
+        }).toList();
         final var endpoint = ProgrammingExerciseTestCaseResource.Endpoints.UPDATE_TEST_CASES.replace("{exerciseId}", String.valueOf(programmingExercise.getId()));
 
         final var testCasesResponse = request.patchWithResponseBody(ROOT + endpoint, updates, new TypeReference<List<ProgrammingExerciseTestCase>>() {
@@ -1352,7 +1373,7 @@ public class ProgrammingExerciseIntegrationTestService {
             testCaseUpdate.setBonusMultiplier(testCase.getId() + 1.0);
             testCaseUpdate.setBonusPoints(testCase.getId() + 2.0);
             return testCaseUpdate;
-        }).collect(Collectors.toList());
+        }).toList();
         final var endpoint = ProgrammingExerciseTestCaseResource.Endpoints.UPDATE_TEST_CASES.replace("{exerciseId}", String.valueOf(programmingExercise.getId()));
 
         final var testCasesResponse = request.patchWithResponseBody(ROOT + endpoint, updates, new TypeReference<List<ProgrammingExerciseTestCase>>() {
@@ -1385,7 +1406,7 @@ public class ProgrammingExerciseIntegrationTestService {
             testCaseUpdate.setBonusMultiplier(testCase.getId() + 1.0);
             testCaseUpdate.setBonusPoints(testCase.getId() + 2.0);
             return testCaseUpdate;
-        }).collect(Collectors.toList());
+        }).toList();
         final var endpoint = ProgrammingExerciseTestCaseResource.Endpoints.UPDATE_TEST_CASES.replace("{exerciseId}", String.valueOf(programmingExercise.getId()));
 
         request.patchWithResponseBody(ROOT + endpoint, updates, String.class, HttpStatus.BAD_REQUEST);
@@ -1439,7 +1460,7 @@ public class ProgrammingExerciseIntegrationTestService {
             testCaseUpdate.setBonusMultiplier(testCase.getBonusMultiplier());
             testCaseUpdate.setBonusPoints(testCase.getBonusPoints());
             return testCaseUpdate;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     public void resetTestCaseWeights_asInstructor() throws Exception {
